# ThePlayheadPreAlpha

./: .gitignore  BUILD_HELP.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  preParseParameters.php  seq24.midi
android/: README.txt
assets/: README.txt  device.json  server.json
assets/RackPatch/: test.json
assets/Synth/Beatnik/: cc_mappings.json  params.xml
assets/Synth/Beatnik/patches/: HR16.json  LM2-standard.json
assets/Synth/Beatnik/samples/: CREDITS.txt
assets/Synth/Dummy/: cc_mappings.json
assets/Synth/DummySin/: cc_mappings.json
assets/Synth/Monolith/: a_new_mapping  cc_mappings.json
assets/Synth/Monolith/Patches/: Portabello.json
assets/Synth/Monolith/patches/: Portabello.json
assets/Synth/Subreal/: cc_mappings.json
assets/fe/: api-ref.html  index.html
assets/projects/: README.txt
assets/projects/demo/: project.json  song.json
bad_attempt/: ServerContext.h  ThePlayhead.cpp  ThePlayhead.h  endpointsCrow.cpp
bck/: CMakeLists.txt
doc/: .~lock.reference.odt#  math.ods  reference.odt
doc/drawings/: construction.odg  rack-overview.odg  system-overview.odg  template.otg
fridge/Sketch/: SketchModel.cpp  SketchModel.h
fridge/Subreal/: SubrealModel.cpp  SubrealModel.h
lab/: .crowlist.cpp.swp  MIDI_CC.txt  Project.cpp  README.txt  _README.txt  crowlist.cpp  dest  destruction.cpp  env2  env2.cpp  env3.cpp  env4.cpp  genWav.cpp  midilog.cpp  noise.c  noise.cpp  noiseFiltered.cpp  output  pa_fuzz.c  pa_fuzz2.c  pa_fuzz3.c  pa_fuzz4.c  pa_list.cpp  pa_seamless.cpp  patch.json  print_c.cpp  project.json  rtMidi.cpp  run  saved_project.json  temp  timing.cpp  wavReader.cpp
lab/cdep/: build  cdep  child.cpp  child.h  main.cpp  output  parent.cpp  parent.h
lab/noise/: main.cpp  run
lab/pafuzz/: README  a.out  dummy  dummy.c  fuzz  pa_fuzz.c  pa_fuzz2.c  run  run2
lab/portlist/: devices  run
lab/timing/: run
lab/traverse/: main.cpp
lab/wav/: WavWriter.cpp  WavWriter.h  test.cpp
scripts/: pan.sh  param.sh  start.sh  stop.sh
src/: ServerContext.hry  ThePlayhead.cry  constants.cpp  constants.h  endpointsCrow.cpp  endpointsCrow.h  endpointsCrow.hry  main copy.cpp  main.cpp  main.cry  mainDebug.cpp  mainDebugBeatnik.cpp  mainDebugFilter.cpp  mainDebugPE.cpp  mainDebugPatchLoad.cpp  mainDebugSubreal.cpp  mainDebugSubrealKV.cpp  mainDebugSubrealPEG.cpp  mainDebugWav.cpp  mainDebugWavLoad.cpp  mainDebug_factory.old  mainDebug_wave.old  main_memleak.cop
src/Effect/: EffectBase.cpp  EffectBase.h  EffectFactory.h  EffectInterface.cpp  EffectInterface.h
src/Effect/Chorus/: ChorusModel.cpp  ChorusModel.h
src/Effect/Chorus2/: Chorus2Model.cpp  Chorus2Model.h  LowPassFilter.cpx  LowPassFilter.hx
src/Effect/Delay/: DelayModel.cpp  DelayModel.h
src/Eventor/: EventorBase.h  EventorFactory.h  EventorInterface.cpp  EventorInterface.h
src/Eventor/Fifth/: FifthModel.h
src/Eventor/Third/: ThirdModel.h
src/Master/: Chorus.h  Reverb.h
src/Synth/: SynthAdmin.h  SynthAdminUtility.h  SynthBase.cpp  SynthBase.h  SynthFactory.h  SynthInstance.cpp  SynthInstance.h  SynthInterface.cpp  SynthInterface.h  SynthParamManager.cpp  SynthParamManager.h
src/Synth/Beatnik/: BeatnikFactory.h  BeatnikModel.cpp  BeatnikModel.h  BeatnikVoice.cpp  BeatnikVoice.h
src/Synth/Dummy/: DummyModel.cpp  DummyModel.h  DummyModel.h.local  parameters.h  parameters.json
src/Synth/DummySin/: DummySinModel.cpp  DummySinModel.h
src/Synth/Monolith/: MonolithAdmin.h  MonolithFactory.h  MonolithModel.cpp  MonolithModel.h
src/Synth/Sketch/: SketchModel.cpp  SketchModel.h  SketchVoice.cpp
src/Synth/Subreal/: SubrealFactory.h  SubrealModel.cpp  SubrealModel.h  SubrealVoice.cpp  SubrealVoice.h
src/Unit/: MidiReciever.h
src/api/: endpointsCrow.cpp  endpointsCrow.h
src/core/: AudioMath.h  ErrorLogger.h  MessageReciever.h  MessageResponder.h  MessageRouter.h  ParamInterfaceBase.h  PlayerEngine.cpp  PlayerEngine.h  README.txt  Rack.h  Rack.h.local  Rotator.cpp  Rotator.h  params.h
src/core/Unit/: MidiReciever.h  PlayheadUnit.h
src/core/admin/: AdminBuffer.h  AdminReader.h  AdminRec.h  README.txt
src/core/api/: endpointsCrow.cpp  endpointsCrow.h  rpcParser.cpp  rpcParser.h
src/core/audio/: AudioMath.cpp  AudioMath.h
src/core/constructor/: GlobalQueue.cpp  GlobalQueue.h  Queue.h  Record.h
src/core/destructor/: DestructorBuffer.h  Queue.h  Worker.h
src/core/errors/: AudioErrorBuffer.h  AudioErrorProxy.h  ErrorBuffer.h  ErrorHandler.h  ErrorLogger.h  ErrorReader.h  ErrorRec.h  README.md
src/core/ext/: README.txt
src/core/factory/: app.h  project.h  rack.h  server.h  unit.h  unitInterface.h
src/core/hallways/: AudioHallway.h  FactoryHallway.h
src/core/helpers/: WavFileManager.h
src/core/logger/: AudioLoggerBuffer.h  AudioLoggerProxy.h  AudioLoggerQueue.h  LoggerBuffer.h  LoggerHandler.h  LoggerQueue.h  LoggerReader.h  LoggerRec.h  README.md
src/core/messages/: MessageInBuffer.h  MessageInQueue.h  MessageOutBuffer.h  MessageOutQueue.h  MessageOutReader.h  MessageReciever.h  MessageSender.h  WebSocketPusher.h
src/core/parameters/: CCRouter.h  ParameterController.h  ParameterDefinition.h  ProjectSettingsManager.h  README.txt  ServerSettingsManager.cpp  ServerSettingsManager.h  SettingsManager.cpp  SettingsManager.h  params.h
src/core/player/: CCManager.h  ConstructorReader.h  ErrorWriter.cpp  ErrorWriter.h  ObjectManager.h  PlayerEngine.cpp  PlayerEngine.h  README.txt  Rack.h  RackEmittor.h
src/core/rpc/: rpcParser.h
src/core/runner/: DestructorQueue.h  ObjectDestructor.h  ObjectDestructor.txt  README.txt  StudioRunner.h
src/core/storage/: DataStore.cpp  DataStore.h  DocMan.h  DocumentManager.h  Project.h  Project_old.h  structs old.h  structs.h
src/core/timing/: Rotator.h
src/core/utils/: FNV.cpp  FNV.h  README.txt  WavReader.h  WavWriter.cpp  WavWriter.h
src/drivers/: AudioDriver.h  AudioManager.h  FileDriver.cpp  FileDriver.h  FileManager.h  MidiDriver.h  MidiManager.h  README.txt
src/synths/: SynthInterface.h
src/synths/Dummy/: DummyModel.cpp  DummyModel.h
src/utils/: FNV.h  README.txt
user/: README.txt  device.json
(+34 files in other folders)
